Revert "fix(1255): vertically align notification close button in IE11"
This reverts commit 6e67fbf57b586f5f45e4d7060553be899aa6903f.

--- a/src/Notification/Notification.scss
+++ b/src/Notification/Notification.scss
@@ -21,10 +21,7 @@
   right: 12px;
   display: flex;
   align-items: center;
-
-  // because IE11 doesn't vertically align. this doesn't break other
-  // browsers because nested <button> has explicit width/height
-  height: 0;
+  height: 100%;
 }
 
 /*Position*/
